fix: mobile browser overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,9 +11,19 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+html,
+body {
+  min-height: -webkit-fill-available;
+  height: 100vh;
+}
+
 /* remove scrollbar */
 *::-webkit-scrollbar {
   width: 0;
+}
+
+.home-layout-children-height {
+  max-height: calc(100vh - 100px);
 }
 
 /* book scrolling section scrollbar */
